--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,10 +1,11 @@
 ---
 import Layout from '../layouts/Layout.astro';
+import Header from '../components/Header.astro';
 ---
 
-<Layout title="Welcome to Astro.">
+<Layout title="Trabook">
+	<Header />
 	<main>
-		
 	</main>
 </Layout>
 
@@ -12,7 +13,7 @@ import Layout from '../layouts/Layout.astro';
 	main {
 		margin: auto;
 		padding: 1rem;
-		width: 800px;
+		width: 920px;
 		max-width: calc(100% - 2rem);
 		color: white;
 		font-size: 20px;
