--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -20,6 +20,12 @@ const { title } = Astro.props;
       integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9"
       crossorigin="anonymous"
     />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Inter:wght@200;400;600&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <slot />
@@ -27,14 +33,17 @@ const { title } = Astro.props;
 </html>
 <style is:global>
   :root {
-		--main:  #fa7436;
+    --main: #fa7436;
   }
   html {
-    font-family: system-ui, sans-serif;
+    scroll-behavior: smooth;
   }
-  code {
-    font-family: Menlo, Monaco, Lucida Console, Liberation Mono,
-      DejaVu Sans Mono, Bitstream Vera Sans Mono, Courier New, monospace;
+  body {
+    font-family: 'Inter', sans-serif;
+
+  }
+  ul {
+    padding: 0;
   }
   a {
     text-decoration: none;
