--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,32 +1,23 @@
 ---
-import Layout from '../layouts/Layout.astro';
-import Header from '../components/Header.astro';
-import Footer from '../components/Footer.astro';
+import Layout from "../layouts/Layout.astro";
+import Header from "../components/Header.astro";
+import Home from "../components/Home.astro";
+import Footer from "../components/Footer.astro";
 ---
 
 <Layout title="Trabook">
-	<Header />
-	<main>
-	</main>
-	<Footer />
+  <Header />
+  <main>
+		<Home />
+  </main>
 </Layout>
+<Footer />
 
 <style>
-	main {
-		margin: auto;
-		padding: 1rem;
-		width: 920px;
-		max-width: calc(100% - 2rem);
-		color: white;
-		font-size: 20px;
-		line-height: 1.6;
-	}
-
-	h1 {
-		font-size: 4rem;
-		font-weight: 700;
-		line-height: 1;
-		text-align: center;
-		margin-bottom: 1em;
-	}
+  main {
+    margin: auto;
+    padding: 6rem 0;
+    width: 920px;
+    max-width: calc(100% - 2rem);
+  }
 </style>
