--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -93,7 +93,7 @@ import logo from "../assets/logo.png";
 
 <style>
   footer {
-    background-color: #f7f8fc;
+    background-color: var(--bg-alt);
   }
   .icon:hover {
     cursor: pointer;
