--- a/src/components/Home.astro
+++ b/src/components/Home.astro
@@ -146,7 +146,7 @@ import imgTourist from "../assets/tourist-with-thumb-up.png";
         ></path>
       </svg>
       </p>
-      <p class="text-muted">Number of ghests</p>
+      <p class="text-muted">Number of guest</p>
     </div>
     <div class="col align-self-center">
       <button class="d-inline-flex py-2 px-4 rounded-2 btn-sign"
@@ -157,6 +157,10 @@ import imgTourist from "../assets/tourist-with-thumb-up.png";
 </section>
 
 <style>
+  #home {
+    max-width: 920px;
+    margin: auto;
+  }
   h1 {
     font-size: 3.2rem;
     font-weight: 700;
