--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -20,12 +20,6 @@ const { title } = Astro.props;
       integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9"
       crossorigin="anonymous"
     />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Inter:wght@200;400;600&display=swap"
-      rel="stylesheet"
-    />
   </head>
   <body>
     <slot />
@@ -34,13 +28,15 @@ const { title } = Astro.props;
 <style is:global>
   :root {
     --main: #fa7436;
+    --bg: #fefcfb;
+    --bg-alt: #f7f8fc;
   }
   html {
     scroll-behavior: smooth;
   }
   body {
-    font-family: 'Inter', sans-serif;
-
+    font-family: sans-serif;
+    background-color: var(--bg);
   }
   ul {
     padding: 0;
