--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -9,16 +9,16 @@ import logo from "../assets/logo.png";
       </a>
       <ul class="navbar-nav d-flex flex-row gap-4">
         <li class="nav-item">
-          <a class="nav-link fs-6" aria-current="page" href="#">Home</a>
+          <a class="nav-link fs-6" aria-current="page" href="#home">Home</a>
         </li>
         <li class="nav-item fs-6">
-          <a class="nav-link" href="#">About</a>
+          <a class="nav-link" href="#about">About</a>
         </li>
         <li class="nav-item fs-6">
-          <a class="nav-link" href="#">Destination</a>
+          <a class="nav-link" href="#destination">Destination</a>
         </li>
         <li class="nav-item fs-6">
-          <a class="nav-link" href="#">Tour</a>
+          <a class="nav-link" href="#tour">Tour</a>
         </li>
         <li class="nav-item fs-6">
           <a class="nav-link" href="#">Blog</a>
