--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -3,6 +3,8 @@ import Layout from "../layouts/Layout.astro";
 import Header from "../components/Header.astro";
 import Home from "../components/Home.astro";
 import About from "../components/About.astro";
+import Destination from "../components/Destination.astro";
+import Tour from "../components/Tour.astro";
 import Footer from "../components/Footer.astro";
 ---
 
@@ -11,6 +13,8 @@ import Footer from "../components/Footer.astro";
   <main>
 		<Home />
 		<About />
+		<Destination />
+		<Tour />
   </main>
 </Layout>
 <Footer />
