--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -5,6 +5,7 @@ import Home from "../components/Home.astro";
 import About from "../components/About.astro";
 import Destination from "../components/Destination.astro";
 import Tour from "../components/Tour.astro";
+import Blog from "../components/Blog.astro";
 import Footer from "../components/Footer.astro";
 ---
 
@@ -15,6 +16,7 @@ import Footer from "../components/Footer.astro";
 		<About />
 		<Destination />
 		<Tour />
+    <Blog />
   </main>
 </Layout>
 <Footer />
