--- a/src/components/Blog.astro
+++ b/src/components/Blog.astro
@@ -42,6 +42,7 @@ import CardBlog from "./CardBlog.astro";
     max-width: 920px;
     margin: 2rem auto;
     padding: 2rem 0;
+    padding-bottom: 6rem;
     background-color: var(--bg);
   }
   .card {
