--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -94,6 +94,7 @@ import logo from "../assets/logo.png";
 <style>
   footer {
     background-color: var(--bg-alt);
+    padding-top: 12rem;
   }
   .icon:hover {
     cursor: pointer;
