--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -21,7 +21,7 @@ import logo from "../assets/logo.png";
           <a class="nav-link" href="#tour">Tour</a>
         </li>
         <li class="nav-item fs-6">
-          <a class="nav-link" href="#">Blog</a>
+          <a class="nav-link" href="#blog">Blog</a>
         </li>
       </ul>
       <ul
