--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -35,6 +35,7 @@ const { title } = Astro.props;
     scroll-behavior: smooth;
   }
   body {
+    position: relative;
     font-family: sans-serif;
     background-color: var(--bg);
   }
