--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -6,7 +6,9 @@ import About from "../components/About.astro";
 import Destination from "../components/Destination.astro";
 import Tour from "../components/Tour.astro";
 import Blog from "../components/Blog.astro";
+import CardEmail from "../components/CardEmail.astro";
 import Footer from "../components/Footer.astro";
+import Testimony from "../components/Testimony.astro";
 ---
 
 <Layout title="Trabook">
@@ -16,10 +18,12 @@ import Footer from "../components/Footer.astro";
 		<About />
 		<Destination />
 		<Tour />
+    <Testimony />
     <Blog />
+    <CardEmail />
   </main>
+  <Footer />
 </Layout>
-<Footer />
 
 <style>
   main {
